Tweaked the JVM parameters to try to improve latency.
Switched to the ZGC garbage collector. Added UseLargePages with a
script to allocate large pages. Automated the heap amount
calculation and set Xms and Xmx to the same value. Added
AlwaysPreTouch.